# AI_PROJECT

./: .env  .env_DB_factory  .firebaserc  .gitignore  AGENTS.md  DB_FACTORY.MD  DOCSQL.sql  PPTX擷取策略.md  ROADMAP.md  SQLTEST_DOC.py  _tmp_text2pptx_old.html  analyze_target_pptx.py  apply_usage_migration.py  change_pw.py  check.py  check_chroma_count.py  check_db.py  check_doc_encodings.py  check_encoding.py  check_encodings.py  check_failed_sqls_tool.py  check_pg_version.py  check_pptx_compatibility.py  check_specific_layouts.py  check_sqlite_raw.py  check_static.py  check_tables.py  check_tables2.py  check_tables_new.py  create_db.py  debug_rag_hang.py  debug_server.py  deep_check_mojibake.py  deep_check_mojibake_v2.py  diag_static.py  direct_openai_test.py  direct_rag_test.py  drop.py  drop2.py  englishchat_question_bank_data.sql  (+53 more)
webapps/text2pptx/pptx2schema/: README.md  cli.py  constants.py  pyproject.toml
webapps/text2pptx/pptx2schema/analyzers/: __init__.py  color_tokenizer.py  layout_classifier.py  region_clusterer.py  template_dna_extractor.py  typography_analyzer.py
webapps/text2pptx/pptx2schema/evaluators/: __init__.py  similarity.py  visual_diff.py
webapps/text2pptx/pptx2schema/examples/: analyze_demo.py  clean_template_demo.py  extract_demo.py  render_demo.py
webapps/text2pptx/pptx2schema/extractors/: __init__.py  layout_extractor.py  pptx_reader.py  shape_extractor.py  slide_extractor.py  template_structure_extractor.py  text_extractor.py  theme_extractor.py  xml_fallback_extractor.py
webapps/text2pptx/pptx2schema/models/: __init__.py  bundle.py  (+3 more)
(+669 files in other folders)
