[project]
name = "pptx2schema"
version = "0.1.0"
description = "Reverse engineer PPTX into reusable schema for text2pptx integration."
requires-python = ">=3.11"
dependencies = [
  "python-pptx>=0.6.23",
  "pydantic>=2.6",
  "typer>=0.12",
]

[project.scripts]
pptx2schema = "webapps.text2pptx.pptx2schema.cli:app"
